solved the icon box align problem

--- a/monoicons.css
+++ b/monoicons.css
@@ -1,5 +1,5 @@
-/* monoicons - 509 icons - 2015.06.05.222722 */
-/* Generated by SVG Font Exporter v0.2.5 with Fireworks 10at Thu, 11 Jun 2015 14:27:22 GMT */
+/* monoicons - 509 icons - 2015.06.05.225648 */
+/* Generated by SVG Font Exporter v0.2.5 with Fireworks 10at Thu, 11 Jun 2015 14:56:48 GMT */
 
 @font-face {
 	font-family: "monoicons";
@@ -14,11 +14,13 @@
 	font-weight: normal;
 }
 
-[class^="mi-"]:before,
+[class^="mi-"],
 .mibox {
 	font-family: "monoicons";
 	font-style: normal;
 	line-height: 1em;
+	display:inline-block;
+	vertical-align: middle;
 }
 
 .mi-left:before{content:"\e001"}
